[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Phil Tom <philtom@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
more-itertools = "^9.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = {version = "^22.10.0", allow-prereleases = true}

[tool.poetry.scripts]
day5 = "aoc.day5:main"
day6 = "aoc.day6:main"
day7 = "aoc.day7:main"
day8 = "aoc.day8:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
